text alignment fixed on lower than 980px devices

--- a/less/template.less
+++ b/less/template.less
@@ -348,6 +348,7 @@ a.shaz3e:hover{background-position:bottom center;}
 		position:static;
 		width:99%;
 		margin:0 0.5%;
+		text-align:center;
 	}
 	.dc-header1{}
 	.dc-header2{}
